fixed horizontal scroll in small widths

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,9 +1,6 @@
 .main-container {
-  margin: 0 auto;
-  
 
   .container {
-    width: 100%;
     max-width: 98rem;
     margin: 0 auto;
     padding: 0 1.5rem;
@@ -57,6 +54,53 @@
   }
 
   @media screen and (min-width: 700px) {
+    header {
+      height: 8rem;
+
+      .nav {
+        .nav-brand {
+          width: 3.5rem;
+        }
+        .nav-list {
+          width: initial;
+          height: initial;
+          background-color: transparent;
+          position: initial;
+          top: initial;
+          right: initial;
+          display: flex;
+          flex-direction: row;
+          transition: initial;
+        }
+        .menu-icons {
+          display: none;
+        }
+        .nav-item {
+          margin: 0 2.5rem;
+        }
+        .nav-link {
+          color: #fafafa;
+          position: relative;
+          font-size: 1.3rem;
+        }
+
+        .nav-link::before {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: -0.5rem;
+          background-color: #3700ad;
+          height: 2px;
+          width: 100%;
+          transform: scaleX(0);
+          transform-origin: left;
+          transition: transform 650ms;
+        }
+        .nav-link:hover::before {
+          transform: scaleX(1);
+        }
+      }
+    }
     .cta {
       height: 60vh;
     }
